# Projects

./: README.md
Full_Projects/LogParser/: Test.sql  test.py
Full_Projects/TriageTool/: README.MD
Full_Projects/WFTAF/: README.MD  TODO.py  WFTAF_Brief.md  _main_.py
Full_Projects/WFTAF-v2/: .gitignore  README.md  main.py  pyproject.toml
Full_Projects/WFTAF-v2/Docs/: ossem_field_mapping.md
Full_Projects/WFTAF-v2/Engine/: __init__.py  normalise.py  schema.py  sigma_engine.py
Full_Projects/WFTAF-v2/Lab/: README.md  simulate_run_key.ps1  simulate_scheduled_task.ps1  simulate_wmi_subscription.ps1
Full_Projects/WFTAF-v2/Modules/: collector_main.ps1  registry_collector.ps1  scheduled_task_collector.ps1  service_collector.ps1  wmi_collector.ps1
Full_Projects/WFTAF-v2/Rules/: t1053_005_scheduled_task.yml  t1543_003_services.yml  t1546_003_wmi_subscription.yml  t1547_001_run_keys.yml
Full_Projects/WFTAF/Parsers/Heuristic_Triage/: README.MD  Version_History.md  _main_.py  print(2).py  pyproject.toml
Full_Projects/WFTAF/Parsers/Heuristic_Triage/src/: Advanced_mod.py  Network_mod.py  Triage_Collector2.ps1  UserActivity_mod.py  __init__.py  _main_.py
Full_Projects/WFTAF/Parsers/Heuristic_Triage/src/Artefact_Modules/: Advanced_mod.py  Processes_mod.py  System_mod.py
Full_Projects/WFTAF/Parsers/Heuristic_Triage/src/Output_folder/: Trig.json
Full_Projects/WFTAF/Parsers/Heuristic_Triage/src/Tests/: Basic_input.py
PowerShell_Projects/AtomicRedTeam/: README.md
PowerShell_Projects/DCUIntunePackaging/: BIOS_PSADT.ps1  DCU_BIOSDetect.ps1  DRIVER_APPDetect.ps1  (+1 more)
(+53 files in other folders)
