[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "WFTAF"
version = "1.0.0"
description = "This project is a modular Digital Forensics and Incident Response (DFIR) framework designed for rapid triage of Windows endpoints. By leveraging high-performance PowerShell data acquisition and Python-based heuristic analysis, this tool transforms raw system telemetry into actionable intelligence.
"
authors = [{ name = "William Richardson" }]
readme = "README.MD"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
